htick 0.02
----------

Sun Jun 20  21:19:00
Fedor:
* change areafix.c

Tue May 11 19:13:26 CEST 1999 
mtt:
+ applied patch by Oleg to compile htick under os/2 with pgcc/emx
	
Thu Apr 29, 1999
Gabriel Plutzar:
 + Downlinks who get files are now added to the Seen By List

Sat Apr 24  
By Alex Erzin, checked in by Gabriel
 + files.bbs files supported
 + seenbys added
	
htick 0.01
(released on Wed Apr 21 18:44:22 CEST 1999)
----------

Sun Apr 11  17:00:00
Antonio:
 + htick supports filearea descriptions.

Mo 22.03.1999
Gabriel Plutzar:
  + Support for Magic Tag

Su 21.03.1999
Gabriel Plutzar:
  + Areafix now writes mails to the right sender name
  + As the to Field in tic file is not necessarily needed as FSC says,
    it is now checked only if it exists, as some Prozessors don't generate
    it

Th 18.03.1999
  Gabriel Plutzar:
  Commented out lines with tossgrp in it, in order to let htick compilable
  with the new fidoconfig version


---	
First Release, there will be many bugs in it